[tool.poetry]
name = "random-zettel"
version = "0.1.0"
description = "Outputing a randome set of notes from The Archive"
authors = ["Will Simpson <will@kestrelcreek.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "random_zettel"}]

[tool.poetry.dependencies]
python = "^3.9"
datetime = "^5.1"
dateutils = "^0.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
